# ipython-ollama

./: README.md  pyproject.toml
ipython_ollama/: magic.py
